<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="150dp"
        android:id="@+id/image"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="2dp"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/article_title"
        android:id="@+id/title"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:layout_below="@id/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clap_count"
            android:id="@+id/claps"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/image"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:id="@+id/author"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:layout_below="@id/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/description"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_below="@id/author"/>


    </RelativeLayout>
</androidx.cardview.widget.CardView>